# slip

./: Cargo.toml  README.md  TODO.md
src/: args.rs  config.rs  lib.rs  main.rs  repolist.rs  tui.rs
