[package]
edition = "2021"
name = "slip_git"
version = "0.1.1"
authors = ["Shiva Prasanth <kesavarapu.siva@gmail.com>"]
description = "Simple `slip` command (git clone runner to better categorize personal repos and work repos)."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
toml = "0.5"
serde_derive = "1.0.133"
serde = "1.0.133"
shellexpand = "2.1.0"
url = "2.2.1"

[[bin]]
name = "slip"
path = "src/main.rs"